<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".WelcomeFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="339dp"
                android:background="@drawable/sheo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:layout_marginTop="40dp"
                android:textSize="40sp"
                android:fontFamily="@font/goblin_one"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/infoo"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/round_btn"
                android:onClick="@{() -> welcomeShareViewModel.goToInstructionStart()}"
                android:text="@string/next"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <variable
            name="welcomeShareViewModel"
            type="com.udacity.shoestore.LoginViewModel" />
    </data>
</layout>